# digital-twin-assessment

./: .gitignore  docker-compose.yaml  docker-compose.yml
backend/: .gitignore
backend/api_gateway/: Dockerfile  README.md  __init__.py  app.py  config.py  database.py  dependencies.py  exceptions.py  kafka_service.py  main.py  models.py  outbox_relayer.py  pyproject.toml  redis_service.py  websocket_service.py  weighting_service.py
backend/api_gateway/auth/: __init__.py  models.py  router.py  security.py  service.py
backend/api_gateway/database/: database_manager.py
backend/api_gateway/routers/: __init__.py  admin.py  assessments.py  health.py  recommendations.py  websockets.py
backend/api_gateway/services/: kafka_service.py  outbox_relayer.py  redis_base_service.py  websocket_service.py
backend/api_gateway/utils/: dependencies.py
backend/init-scripts/: 01-create-databases.sql  02-api-gateway-schema.sql  02-create-auth-tables.sql  03-services-schemas.sql  99-verify-setup.sql
backend/services/elca/: Dockerfile  README.md  __init__.py  app.py  config.py  database.py  kafka_handler.py  main.py  models.py  pyproject.toml  score.py
backend/services/human_centricity/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  config.py  database.py  kafka_handler.py  main.py  models.py  score.py  statement_manager.py
backend/services/lcc/: Dockerfile  README.md  __init__.py  app.py  config.py  database.py  kafka_handler.py  main.py  models.py  pyproject.toml  score.py
backend/services/recommendation/: Dockerfile  ai_engine.py  app.py  config.py  database.py  kafka_handler.py  knowledge_base.py  main.py  pyproject.toml
backend/services/resilience/: Dockerfile  README.md  __init__.py  app.py  config.py  database.py  kafka_handler.py  main.py  models.py  pyproject.toml  scenario_manager.py  scoring.py
backend/services/slca/: Dockerfile  README.md  __init__.py  app.py  config.py  database.py  kafka_handler.py  main.py  models.py  pyproject.toml  score.py
backend/services/sustainability/: Dockerfile  README.md  __init__.py  app.py  config.py  criterion_manager.py  database.py  kafka_handler.py  main.py  models.py  pyproject.toml  scoring.py
backend/services/sustainability/slca/: pyproject.toml
backend/shared/: README.md  __init__.py  database.py  health.py  kafka_utils.py  logging_config.py  pyproject.toml
backend/shared/models/: __init__.py  assessment.py  events.py  exceptions.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/auth/: AuthProvider.tsx  auth.types.ts  authService.ts  index.ts  useAuth.ts
frontend/src/components/: AnimatedBackground.tsx  CreateAssessment.tsx  PaginatedForm.tsx  SummaryStatsDisplay.tsx  UnifiedDomainSelector.tsx  UserNavigation.tsx
frontend/src/components/admin/: AdminDashboard.tsx  AdminLayout.tsx  AdminSidebar.tsx  ProtectedAdminRoute.tsx  ServiceHealthMonitor.tsx  UserManagement.tsx
frontend/src/components/auth/: AuthModal.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  UserProfile.tsx
frontend/src/components/dashboard/: AssessmentDashboard.tsx  AssessmentsList.tsx  ConnectionIndicator.tsx  (+4 more)
frontend/src/contexts/: LanguageContext.tsx
frontend/src/hooks/: useAdminApi.ts  useAssessment.ts  useHumanCentricity.ts  useRecommendations.ts  useScenarios.ts  useSustainability.ts  useWebSocket.ts
frontend/src/pages/: Assessment.tsx  AssessmentDashboardPage.tsx  AssessmentsListPage.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Profile.tsx
frontend/src/services/: ResilienceAPI.ts  adminApi.ts  assessmentApi.ts  humanCentricityApi.ts  recommendationsApi.ts  scenariosApi.ts  sustainabilityApi.ts
frontend/src/types/: admin.ts
(+24 files in other folders)
