[project]
name = "recommendation"
version = "0.1.0"
description = ""
authors = [
    {name = "Achref Gataa",email = "achrefgataa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq (>=0.32.0,<0.33.0)",
    "openai (>=2.3.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
